fixed some overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 
-body{
-    padding: 0px;
+html
+{
+    width: 100%;
+    height: 100%;
     margin: 0px;
+    padding: 0px;
+    overflow-x:hidden;
 }
-
 
 header{
     display: flex;
@@ -18,6 +21,13 @@ header{
     top: 0;
     border-bottom: grey solid 2.5px;
     z-index:10;
+}
+
+main{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 div.left{
@@ -179,7 +189,7 @@ a:hover{
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px) {
     h1{
         font-size: 30pt;
     }
